[package]
name = "infra"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "0.3.0"
failure = "0.1.3"
data-encoding = "2.1.2"
rand = "0.7.0"
serde = {version="1.0.99", features=["derive"]}
serde_json = "1.0.40"
