[package]
name = "infra"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "0.3.0"
failure = "0.1.3"
data-encoding = "2.1.2"
rand = "0.7.0"
serde = {version="1.0.99", features=["derive"]}
serde_json = "1.0.40"
log = "0.4.8"
r2d2_postgres = "0.14.0"
r2d2 = "0.8.5"

[dependencies.postgres]
features = ["with-serde_json"]
version = "0.15.2"

[dev-dependencies]
env_logger = "0.6.2"
lazy_static = "1.3.0"
