[package]
name = "wahlen"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
serde = "1.0.99"
infra = { path = "../infra" }
env_logger = "0.6.2"
failure = "0.1.5"
actix-web = "1.0.5"
actix = "0.8.3"
actix-files = "0.1.4"
toml = "0.5.3"
structopt = "0.2.18"
postgres = "0.15.2"
maplit = "1.0.2"

[dependencies.weft]
git = "https://github.com/cstorey/weft.git"

[dependencies.weft_derive]
git = "https://github.com/cstorey/weft.git"
optional = false

[dependencies.weft-actix]
git = "https://github.com/cstorey/weft.git"

[dev-dependencies]
sulfur = { git = "https://github.com/cstorey/sulfur.git" }
failure = "0.1.5"
actix-http-test = "0.2.4"
actix-http = "0.2.9"
url = "2.1.0"
serde_urlencoded = "0.6.1"
